refactor Collectors.toList with immutable stream toList